--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,12 @@ header p{
   }
 }
 
+@media (min-width:1200px){
+  #help h2{
+  margin-left: 18em;
+  }
+}
+
 #request{
   margin-bottom: 1.5em;
   margin-left: 1em;
@@ -157,6 +163,16 @@ header p{
   }
 }
 
+@media(min-width:1200px){
+  #request{
+    margin-left: 22em;
+  }
+
+  #request a{
+    padding-left: 2em;
+  }
+}
+
 #insurance{
   background-color: #febdc2;
   padding-top: 2em;
@@ -167,6 +183,9 @@ header p{
 #insurance ul{
   padding-left: 1em;
   padding-right: 1em;
+  font-family: 'GreycliffCF-Regular';
+  color: #195130;
+  font-size: 1.2em;
 }
 
 #insurance ul:nth-child(1){
@@ -179,6 +198,12 @@ header p{
   #insurance ul{
     padding-left: 1.5em;
     padding-right: 3em;
+  }
+}
+
+@media (min-width:1200px){
+  #insurance ul{
+    font-size: 1em;
   }
 }
 
@@ -250,6 +275,12 @@ footer a{
   }
   #hello img{
     margin-left: 35em;
+  }
+}
+
+@media (min-width:1200px){
+  #hello img{
+    margin-left: 42em;
   }
 }
 
@@ -409,6 +440,12 @@ footer a{
   }
 }
 
+@media (min-width:1200px){
+  #test h2{
+    padding-left: 19em;
+  }
+}
+
 #test ul{
   font-family: 'GreycliffCF-Regular';
   color: #195130;
@@ -541,6 +578,12 @@ footer a{
 @media (min-width:768px){
   #resources h1{
     padding-left: 16.5em;
+  }
+}
+
+@media (min-width:1200px){
+  #resources h1{
+    padding-left: 20em;
   }
 }
 
