--- a/css/style.css
+++ b/css/style.css
@@ -267,8 +267,8 @@ footer a{
 #hello img{
   position: absolute;
   width: 15em;
-  margin-left: 7em;
-  margin-top: -1.6em;
+  margin-left: 4.4em;
+  margin-top: -0.6em;
 }
 
 @media (min-width:768px){
@@ -296,8 +296,8 @@ footer a{
 
 #hello h1{
   position: relative;
-  padding-top: .5em;
-  padding-left: .5em;
+  padding-bottom: .5em;
+  padding-left: 1.2em;
   font-family: 'sofia-pro', sans-serif;
   font-weight: 700;
   font-style: normal;
