--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,46 @@ footer a{
   font-size: 1em;
 }
 
+footer span{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #f7f0f0;
+  font-size: 1em;
+  border-bottom: solid #febdc2;
+}
+
+footer p{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #f7f0f0;
+  font-size: 1em;
+  margin-left: 7.8em;
+  margin-top: -2em;
+}
+
+@media (min-width:768px){
+  footer p{
+    margin-left: 6.6em;
+    margin-top: -1.5em;
+  }
+}
+
+@media (min-width:992px){
+  footer p{
+    margin-left: 4.2em;
+    margin-top: -.5em;
+  }
+}
+
+@media (min-width:1200px){
+  footer p{
+    margin-left: 5.1em;
+    margin-top: -1.1em;
+  }
+}
+
 #hello{
   margin-bottom: 15em;
 }
