--- a/css/style.css
+++ b/css/style.css
@@ -61,81 +61,51 @@ header p{
   font-family: 'sofia-pro', sans-serif;
   font-weight: 300;
   font-style: normal;
-    color: #195130;
-    font-size: 1em;
-    padding-left: 1em;
+  color: #195130;
+  font-size: 1em;
+  padding-left: 1em;
 }
 
-#help h2{
+#hi{
+
+}
+
+#hi img{
+  margin-left: 2.7em;
+}
+
+#hi h2{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #195130;
+}
+
+#hi h1{
   font-family: 'sofia-pro', sans-serif;
   font-weight: 700;
   font-style: normal;
   color: #195130;
-  font-size: 1.5em;
-  margin-bottom: .8em;
 }
 
-#help ul{
-    list-style: none;
-    font-family: 'sofia-pro', sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    color: #195130;
-    font-size: 1em;
-}
-
-#help ul:nth-child(1){
+#hi p{
   font-family: 'sofia-pro', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 1.5em;
-  margin-bottom: .5em;
-}
-
-#help a{
-  font-family: 'sofia-pro', sans-serif;
-  font-weight: 700;
+  font-weight: 300;
   font-style: normal;
   color: #195130;
-  font-size: 1.2em;
 }
 
-#help ul{
-  margin-top: 1.6em;
-}
-@media (min-width: 768px){
-  #help #plan{
-    margin-top: 3.2em;
-  }
-  #help h2{
-  margin-left: 7.5em;
-  }
-}
 
-@media (min-width:992px){
-  #help h2{
-  margin-left: 14em;
-  }
-  #help #plan{
-    margin-top: 1.6em;
-  }
-}
-
-@media (min-width:1200px){
-  #help h2{
-  margin-left: 18em;
-  }
-}
 
 #request{
   margin-bottom: 1.5em;
   margin-left: 1em;
   margin-top: 1.5em;
-  padding-top: 1em;
-  padding-left: 2.2em;
-  padding-bottom: 1em;
-  background-color: #f7e2e9;
-  border: .2em solid #f7e2e9;
+  padding-top: .5em;
+  padding-left: 1em;
+  padding-bottom: .5em;
+  background-color: #febdc2;
+  border: .5em solid #f7e2e9;
   border-radius: 2em;
 }
 
@@ -149,7 +119,7 @@ header p{
 
 @media (min-width:768px){
   #request{
-    margin-left: 11em;
+    margin-left: 13em;
   }
 }
 
@@ -169,47 +139,167 @@ header p{
   }
 
   #request a{
-    padding-left: 2em;
+    padding-left: 3em;
   }
 }
 
-#insurance{
+#well{
   background-color: #febdc2;
-  padding-top: 2em;
-  padding-bottom: 1.5em;
-  margin-bottom: 1.5em;
 }
 
-#insurance ul{
-  padding-left: 1em;
-  padding-right: 1em;
+#well h2{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.5em;
+  padding-bottom: .2em;
+  padding-top: .8em;
+  border-bottom: .2em solid #f7e2e9;
+}
+
+#well img{
+  margin-left: 2em;
+  margin-bottom: 1em;
+}
+
+#well p{
   font-family: 'sofia-pro', sans-serif;
   font-weight: 300;
   font-style: normal;
   color: #195130;
   font-size: 1.2em;
+  line-height: 1.7em;
 }
 
-#insurance ul:nth-child(1){
+@media(min-width:768px){
+  #well img{
+    margin-left: 0em;
+    margin-bottom: 2em;
+  }
+
+  #well h2{
+    margin-left: 8em;
+    padding-left: 1em;
+  }
+
+  #well p{
+    margin-left: 17em;
+    margin-top: -22em;
+  }
+}
+
+@media(min-width:992px){
+  #well img{
+    margin-left: 0em;
+    margin-bottom: 2em;
+  }
+
+  #well h2{
+    margin-left: 13em;
+    padding-top: 2em;
+  }
+
+  #well p{
+    margin-left: 17em;
+    margin-top: -19em;
+    padding-bottom: 6em;
+  }
+}
+
+@media(min-width:992px){
+  #well img{
+    margin-top: -1em;
+  }
+
+  #well p{
+    margin-top: -17em;
+  }
+}
+
+#physical h3{
   font-family: 'sofia-pro', sans-serif;
-  font-weight: 700;
+  font-weight: 300;
   font-style: normal;
   color: #195130;
-  font-size: 1.5em;
+  font-size: 1.2em;
+  line-height: 1.5em;
+}
+
+#greenline1{
+  background-color: #195130;
+  border: solid #195130;
+  border-radius: 1em;
+  margin-top: 1.5em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+}
+
+#greenline2{
+  background-color: #195130;
+  border: solid #195130;
+  border-radius: 1em;
+  margin-bottom: 1.5em;
+  margin-top: 1em;
+  margin-left: 1em;
+}
+
+@media (min-width: 768px){
+  #greenline1{
+    margin-bottom: 2.2em;
+    margin-top: 2em;
+  }
+
+  #greenline2{
+    margin-bottom: 2.5em;
+    margin-top: 2em;
+  }
+}
+
+#greenline3{
+  background-color: #195130;
+  border: thin solid #195130;
+  border-radius: 1em;
+  margin-bottom: 2em;
+}
+
+#greenline4{
+  background-color: #195130;
+  border: thin solid #195130;
+  border-radius: 1em;
+  margin-bottom: 2em;
+}
+
+#greenline5{
+  background-color: #195130;
+  border: thin solid #195130;
+  border-radius: 1em;
+  margin-bottom: 2em;
+}
+
+#greenline6{
+  background-color: #195130;
+  border: thin solid #195130;
+  border-radius: 1em;
+  margin-bottom: 1.5em;
+  margin-top: 1em;
+  margin-left: 2em;
+}
+
+@media (min-width:768px){
+  #greenline6{
+    margin-left: 5em;
+  }
 }
 
 @media (min-width:992px){
-  #insurance ul{
-    padding-left: 1.5em;
-    padding-right: 3em;
+  #greenline6{
+    margin-left: 7em;
   }
 }
 
-@media (min-width:1200px){
-  #insurance ul{
-    font-size: 1em;
-  }
-}
+
+
 
 #test1{
   font-family: 'sofia-pro', sans-serif;
@@ -227,7 +317,8 @@ header p{
 
 @media (min-width:768px){
   #test1 ul{
-    margin-left: 9em;
+    margin-left: 22em;
+    margin-top: -9em;
   }
 }
 
@@ -238,10 +329,20 @@ header p{
     font-style: normal;
     color: #195130;
     font-size: 1.2em;
-    margin-left: 7em;
-    margin-top: 2em;
+    margin-left: 11em;
+    margin-top: -9em;
     margin-bottom: 1.5em;
     width: 20em;
+  }
+
+  #test1 img{
+    margin-top: 6em;
+  }
+}
+
+@media(min-width:1200px){
+  #test1 img{
+    margin-top: 4em;
   }
 }
 
@@ -275,47 +376,69 @@ footer p{
   font-style: normal;
   color: #f7f0f0;
   font-size: 1em;
-  margin-left: 7.8em;
-  margin-top: -2em;
+  margin-left: 5.5em;
+  margin-top: -1em;
+}
+
+footer img{
+  margin-top: 2em;
 }
 
 @media (min-width:768px){
   footer p{
-    margin-left: 6.6em;
-    margin-top: -1.5em;
+    margin-left: 7.6em;
+    margin-top: -2.5em;
   }
 }
 
 @media (min-width:992px){
   footer p{
-    margin-left: 4.2em;
-    margin-top: -.5em;
+    margin-left: 5.2em;
+    margin-top: -1.5em;
   }
 }
 
 @media (min-width:1200px){
   footer p{
-    margin-left: 5.1em;
-    margin-top: -1.1em;
+    margin-left: 6.1em;
+    margin-top: -2.1em;
   }
 }
 
 #hello{
-  margin-bottom: 15em;
+  margin-bottom: 3em;
 }
 
+#hello h1{
+  padding-left: 4em;
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 2em;
+  z-index: 4;
+}
+
+
 #hello img{
-  position: absolute;
   width: 15em;
-  margin-left: 4.4em;
-  margin-top: -0.6em;
+  margin-left: 5.4em;
+    margin-top: 1.4em;
 }
 
 @media (min-width:768px){
   #hello img{
     width: 20em;
-    margin-left: 22em;
-    margin-top: -105px;
+    margin-left: 13em;
+    margin-top: 15px;
+  }
+
+  #hello{
+    margin-bottom: 15em;
+  }
+
+  #hello h1{
+    margin-left: 5.5em;
   }
 }
 
@@ -324,7 +447,11 @@ footer p{
     margin-bottom: 20em;
   }
   #hello img{
-    margin-left: 35em;
+    margin-left: 5em;
+  }
+
+  #hello h1{
+    margin-left: 9.5em;
   }
 }
 
@@ -332,19 +459,17 @@ footer p{
   #hello img{
     margin-left: 42em;
   }
+
+  #hello h1{
+    margin-left: 12.5em;
+  }
+
+  #hello{
+    margin-bottom: 22em;
+  }
 }
 
-#hello h1{
-  position: relative;
-  padding-bottom: .5em;
-  padding-left: 1.2em;
-  font-family: 'sofia-pro', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  color: #195130;
-  font-size: 2.5em;
-  z-index: 4;
-}
+
 
 #prof section{
   background-color: #febdc2;
@@ -362,7 +487,7 @@ footer p{
   font-style: normal;
   color: #195130;
   font-size: 1.5em;
-  padding-left: 3.2em;
+  line-height: 1.5em;
 }
 
 @media (min-width:768px){
@@ -374,7 +499,7 @@ footer p{
 
 @media (min-width:992px){
   #phil h2{
-    margin-top: -11.5em;
+    margin-top: -23.5em;
   }
 }
 
@@ -389,78 +514,90 @@ footer p{
 
 #education h2{
   font-family: 'sofia-pro', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   font-style: normal;
   color: #195130;
   font-size: 1.5em;
-  padding-left: 4.4em;
+  padding-bottom: .5em;
+  border-bottom: .2em solid #febdc2;
 }
 
-@media (min-width:768px){
-  #education h2{
-    padding-left: 0em;
-  }
-}
-
-#education ul{
+#education p{
   font-family: 'sofia-pro', sans-serif;
   font-weight: 300;
   font-style: normal;
   color: #195130;
   font-size: 1em;
-  padding-left: .5em;
-  padding-right: .5em;
+  line-height: 1.8em;
+  padding-left: 1em;
 }
 
 @media (min-width:768px){
-  #education ul{
-    padding-left: 0em;
+  #education h2{
+    margin-left: 10.8em;
+    padding-left: 1em;
   }
-}
-
-#education li{
-  margin-bottom: 1em;
-}
-
-#education{
-  margin-bottom: 2em;
-}
-
-#exp{
-  background-color: #febdc2;
-  padding: 2.2em;
-
 }
 
 @media (min-width:992px){
-  #education{
-    margin-top: 2em;
+  #education h2{
+    margin-left: 6.2em;
   }
+}
 
-  #exp{
-    margin-top: 2em;
-  }
+
+
+
+#exp{
+  padding-top: 1.5em;
 }
 
 #exp h2{
   font-family: 'sofia-pro', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   font-style: normal;
   color: #195130;
   font-size: 1.5em;
-  padding-left: 2.2em;
   padding-bottom: .5em;
+
+  border-bottom: .2em solid #febdc2;
 }
+
+#exp p{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #195130;
+  font-size: 1em;
+  margin-bottom: 2em;
+  line-height: 1.8em;
+  padding-left: 1em;
+}
+
+@media (min-width:992px){
+  #education{
+    margin-top: 3em;
+  }
+
+  #exp{
+    margin-top: 1.5em;
+
+  }
+}
+
+
 
 @media (min-width:768px){
   #exp h2{
-    padding-left: 6em;
+    padding-left: 1em;
+    margin-left: 10.5em;
   }
 }
 
 @media (min-width:992px){
   #exp h2{
-    padding-left: 0em;
+    padding-left: 1em;
+    margin-left: 3em;
   }
 }
 
@@ -485,7 +622,7 @@ footer p{
 
 #test h2{
   font-family: 'sofia-pro', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   font-style: normal;
   color: #195130;
   font-size: 1.5em;
@@ -536,53 +673,453 @@ footer p{
   }
 }
 
-#hobbies h2{
+/*services*/
+#help h1{
+  padding-left: 3em;
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 2em;
+  z-index: 4;
+}
+
+#help h2{
   font-family: 'sofia-pro', sans-serif;
   font-weight: 700;
   font-style: normal;
   color: #195130;
   font-size: 1.5em;
-  padding-left: 4.5em;
-  padding-bottom: .5em;
+  margin-bottom: .8em;
+  margin-left: 3em;
 }
 
-@media (min-width:768px){
-  #hobbies h2{
-    padding-left: 12em;
-    margin-top: 2em;
+#help ul{
+    list-style: none;
+    font-family: 'sofia-pro', sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: #195130;
+    font-size: 1em;
+}
+
+#help h3{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.2em;
+  margin-bottom: .2em;
+}
+
+#help img{
+  margin-bottom: .8em;
+}
+
+#help a{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.2em;
+}
+
+#help ul{
+  margin-top: 1.6em;
+}
+@media (min-width: 768px){
+  #help h1{
+    padding-left: 8.7em;
+  }
+
+  #help #plan{
+    margin-top: 3.2em;
+  }
+  #help h2{
+  margin-left: 10.5em;
   }
 }
 
 @media (min-width:992px){
-  #hobbies h2{
-    padding-left: 0em;
-    margin-top: -4em;
+  #help h1{
+    padding-left: 12.7em;
+  }
+  #help h2{
+  margin-left: 16em;
+  }
+  #help #plan{
+    margin-top: 1.6em;
   }
 }
 
-#hobbies p{
+@media (min-width:1200px){
+  #help h2{
+  margin-left: 18.7em;
+  }
+
+  #help h1{
+    padding-left: 14.7em;
+  }
+
+  #help img{
+    margin-left: 6em;
+  }
+}
+
+#flower{
+  position: absolute;
+  margin-top: 70em;
+  margin-left: 3em;
+}
+
+#flower h2{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.2em;
+}
+
+#flower p{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  color: #195130;
+  font-size: .8em;
+  line-height: 1.9em;
+}
+
+@media (min-width:768px){
+  #flower{
+    margin-top: 72em;
+    margin-left: 6em;
+  }
+
+  #flower p{
+    line-height: 2em;
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width:992px){
+  #flower{
+    margin-top: 34.5em;
+    margin-left: 5em;
+  }
+
+  #flower h2{
+    font-size: 1.5em;
+  }
+
+  #flower p{
+    font-size: .9em;
+  }
+}
+
+@media (min-width:1200px){
+  #flower{
+    margin-top: 38.5em;
+    margin-left: 6em;
+  }
+}
+
+#bouqet img{
+  position: relative;
+  z-index: 4;
+}
+
+#con{
+  margin-top: 7em;
+}
+
+#con h2{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.5em;
+}
+
+#con li{
   font-family: 'sofia-pro', sans-serif;
   font-weight: 300;
   font-style: normal;
   color: #195130;
-  font-size: 1em;
-  margin-bottom: 1.5em;
+}
+
+#con p{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #195130;
 }
 
 @media (min-width:768px){
-  #hobbies p{
-    margin-left: 12em;
-    margin-bottom: 1.5em;
+  #con{
+    margin-top: 3em;
+    margin-bottom: 2em;
   }
 }
 
 @media (min-width:992px){
-  #hobbies p{
-    margin-left: 7em;
-    margin-top: -3em;
+  #con{
+    margin-top: 4em;
+    margin-left: 2em;
+  }
 
+  #con h2{
+    margin-bottom: 1em;
   }
 }
+
+#book{
+  margin-bottom: 1.5em;
+  margin-top: 1.5em;
+  padding-top: .5em;
+  padding-left: 1em;
+  padding-bottom: .5em;
+  background-color: #febdc2;
+  border: .5em solid #f7e2e9;
+  border-radius: 2em;
+  margin-left: -1em;
+}
+
+#book a{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.2em;
+}
+
+@media (min-width:768px){
+  #book{
+    margin-left: 0em;
+  }
+}
+
+@media(min-width:992px){
+  #book{
+    margin-left: 0em;
+  }
+
+  #book a{
+    padding-left: 1em;
+  }
+}
+
+@media(min-width:1200px){
+  #book{
+  }
+
+  #book a{
+    padding-left: 2em;
+  }
+}
+
+#insurance h2{
+  padding-left: 1em;
+  padding-right: 1em;
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.5em;
+}
+
+#insurance p{
+  padding-left: 1em;
+  padding-right: 1em;
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.2em;
+}
+
+#insurance{
+  background-color: #f7e2e9;
+  padding-top: 2em;
+  padding-bottom: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+
+@media (min-width:992px){
+  #insurance ul{
+    padding-left: 1.5em;
+    padding-right: 3em;
+  }
+
+  #insurance{
+    margin-top: 2em;
+  }
+}
+
+@media (min-width:1200px){
+  #insurance ul{
+    font-size: 1em;
+  }
+}
+
+/*resources*/
+
+.pinkline{
+  background-color: #febdc2;
+  border: thin solid #febdc2;
+  border-radius: 1em;
+  margin-bottom: 1em;
+}
+
+.dropdown{
+  margin-left: 7em;
+  margin-bottom: 2em;
+}
+
+.dropdown-menu{
+
+}
+
+.dropdown-item{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #195130
+}
+
+.dropdown button{
+  background-color: #195130;
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #f7e2e9;
+}
+
+.dropdownMenuButton{
+  background-color: #195130;
+}
+
+.btn-secondary{
+  border-color: #195130 !important;
+}
+
+@media (min-width:768px){
+  .dropdown{
+    margin-left: 19.6em;
+  }
+}
+
+@media (min-width:992px){
+  .dropdown{
+    margin-left: 25.6em;
+  }
+}
+
+@media (min-width:1200px){
+  .dropdown{
+    margin-left: 31.6em;
+  }
+}
+
+#source h1{
+  padding-left: 4.2em;
+  margin-top: 1em;
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.5em;
+  z-index: 4;
+}
+
+#source h2{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.2em;
+  margin-bottom: .8em;
+  margin-left: 3em;
+}
+
+#source p{
+    list-style: none;
+    font-family: 'sofia-pro', sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: #195130;
+    font-size: 1em;
+    padding: 1em;
+}
+
+#source h3{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.2em;
+  margin-bottom: .2em;
+}
+
+#source img{
+  margin-bottom: .8em;
+}
+
+#source a{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.2em;
+}
+
+#source ul{
+  margin-top: 1.6em;
+}
+@media (min-width: 768px){
+  #source h1{
+    padding-left: 12.7em;
+  }
+
+  #source p{
+    margin-left: 9em;
+  }
+
+  #source #plan{
+    margin-top: 3.2em;
+  }
+  #source h2{
+  margin-left: 10.5em;
+  }
+}
+
+@media (min-width:992px){
+  #source h1{
+    padding-left: 16.7em;
+  }
+  #source p{
+    margin-left: 10em;
+  }
+  #source h2{
+  margin-left: 16em;
+  }
+  #source #plan{
+    margin-top: 1.6em;
+  }
+}
+
+@media (min-width:1200px){
+  #source h2{
+    margin-left: 18em;
+  }
+
+  #source p{
+    margin-left: 17em;
+  }
+
+  #source h1{
+    padding-left: 20.7em;
+  }
+}
+
 
 .card-columns{
   @include media-breakpoint-only(lg){
@@ -591,6 +1128,14 @@ footer p{
   @include media-breakpoint-only(xl){
     column-count: 5;
   }
+}
+
+.card-columns h2{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.4em;
 }
 
 .card-body{
