--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,11 @@ header p{
 
 
 #request{
-  margin-bottom: 1.5em;
-  margin-left: 1em;
+  margin-left: 2em;
   margin-top: 1.5em;
+  margin-bottom: 2em;
   padding-top: .5em;
-  padding-left: 1em;
+  padding-left: 2.5em;
   padding-bottom: .5em;
   background-color: #febdc2;
   border: .5em solid #f7e2e9;
@@ -120,26 +120,59 @@ header p{
 @media (min-width:768px){
   #request{
     margin-left: 13em;
+    padding-left: 2em;
   }
 }
 
 @media(min-width:992px){
   #request{
-    margin-left: 18em;
+    margin-left: 21em;
   }
 
   #request a{
-    padding-left: 1.5em;
+    padding-left: .7em;
   }
 }
 
 @media(min-width:1200px){
   #request{
-    margin-left: 22em;
+    margin-left: 25em;
   }
 
   #request a{
-    padding-left: 3em;
+    padding-left: 2.5em;
+  }
+}
+
+#appointment{
+  margin-left: 1em;
+  margin-top: 1.5em;
+  margin-bottom: 2em;
+  padding-top: .5em;
+  padding-left: 2.3em;
+  padding-bottom: .5em;
+  background-color: #febdc2;
+  border: .5em solid #f7e2e9;
+  border-radius: 2em;
+}
+
+#appointment a{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.2em;
+}
+
+@media (min-width:768px){
+  #appointment{
+    padding-left: 3.4em;
+  }
+}
+
+@media(min-width:1200px){
+  #appointment a{
+    padding-left: 1em;
   }
 }
 
@@ -320,6 +353,10 @@ header p{
     margin-left: 22em;
     margin-top: -9em;
   }
+
+  #test1 img{
+    margin-bottom: 1em;
+  }
 }
 
 @media (min-width:992px){
@@ -380,8 +417,24 @@ footer p{
   margin-top: -2.5em;
 }
 
+footer h4{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #f7f0f0;
+  font-size: 1em;
+  margin-left: 5.5em;
+  margin-top: -0.5em;
+}
+
 #address ul{
   margin-left: 5.4em;
+}
+
+@media(min-width: 992px){
+  #address{
+    margin-top: -6em;
+  }
 }
 
 footer h3{
@@ -414,6 +467,10 @@ footer img{
   footer li{
     margin-left: 7.5em;
   }
+
+  footer h4{
+    margin-left: 7.5em;
+  }
 }
 
 @media (min-width:992px){
@@ -429,12 +486,20 @@ footer img{
   footer ul{
     margin-top: -4.5em;
   }
+
+  footer h4{
+    margin-left: 5.2em;
+  }
 }
 
 @media (min-width:1200px){
   footer p{
     margin-left: 6.1em;
     margin-top: -2.1em;
+  }
+
+  footer h4{
+    margin-left: 6.1em;
   }
 }
 
@@ -502,7 +567,9 @@ footer img{
   }
 }
 
-
+article #four{
+  margin-top: -32em;
+}
 
 #prof section{
   background-color: #febdc2;
@@ -1371,50 +1438,36 @@ footer img{
   margin-bottom: .5em;
 }
 
-form{
-  background-color: #f7e2e9;
-  padding: 2em;
-  border: solid #f7e2e9;
-  border-radius: .5em;
-  margin-bottom: 2em;
-}
-
-@media (min-width:992px){
-  form{
-    margin-top: 9em;
+@media (min-width: 768px){
+  #secondlist{
+    margin-top: -17em;
   }
 }
 
-#form label{
+#form h1{
   font-family: 'sofia-pro', sans-serif;
-  font-weight: 300;
+  font-weight: 700;
   font-style: normal;
   color: #195130;
-  font-size: 1em;
-}
-
-#form input{
-  margin-bottom: .5em;
-  width: 100%;
-  border: none;
-  border-radius: .5em;
-}
-
-#form input{
-  font-family: 'sofia-pro', sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  color: #195130;
-  font-size: 1em;
-  background-color: #f7f0f0;
-  padding: .5em;
-}
-
-#form textarea{
-  width: 100%;
-  height: 10em;
-  border: none;
-  border-radius: .5em;
-  background-color: #f7f0f0;
+  font-size: 2em;
   margin-bottom: 1em;
+}
+
+#form p{
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #195130;
+  font-size: 1.3em;
+}
+
+@media (min-width:768px){
+  #form{
+    margin-bottom: 1em;
+  }
+
+  #form h1{
+    margin-top: 1em;
+    margin-bottom: .5em;
+  }
 }
